[package]
name = "tape"
version = "0.2.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/tape"
homepage = "https://github.com/stainless-steel/tape"
documentation = "https://stainless-steel.github.io/tape"
description = "The library provides basic operations with tape archives (tar)."

[dependencies]
libc = "*"
libtar-sys = "*"

[dev-dependencies]
temporary = "*"
