[package]
name = "tape"
version = "0.4.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/tape"
homepage = "https://github.com/stainless-steel/tape"
documentation = "https://stainless-steel.github.io/tape"
description = "The library provides basic operations with tape archives (tar)."

[dependencies]
lazy_static = "0.1"
libc = "0.2"
tar-sys = "0.2"

[dev-dependencies]
temporary = "0.5"
