[package]
name = "tape"
version = "0.5.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The library provides basic operations with tape archives (tar)."
documentation = "https://stainless-steel.github.io/tape"
homepage = "https://github.com/stainless-steel/tape"
repository = "https://github.com/stainless-steel/tape"

[dependencies]
lazy_static = "0.2"
libc = "0.2"
tar-sys = "0.3"

[dev-dependencies]
temporary = "0.6"
