[package]
name = "libtar-sys"
version = "0.0.2"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/tape/libtar-sys"
homepage = "https://github.com/stainless-steel/tape/libtar-sys"
description = "The library facilitates static linking with libtar."
links = "tar"
build = "build.rs"
